Correção bugs e melhora legibilidade Form de Posts

--- a/app/views/admin/Form.posts.css
+++ b/app/views/admin/Form.posts.css
@@ -1,14 +1,14 @@
 html, body {
-    height: 100%; /* Define a altura do html e body como 100% */
-    margin: 0; /* Remove as margens padrão */
+    height: 100%; 
+    margin: 0; 
     font-family: 'Amethysta';
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 300;
 }
 
 body {
     background: linear-gradient(136deg, rgb(0, 0, 0) 0%, hsl(19, 100%, 50%) 0%, #000000 60%);
-    color: white; /* Define a cor do texto */
+    color: white; 
 }
 
 .container {
